--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
 
-        <div class="container text-center my-3">
+        <div class="container container-sm text-center my-3">
 
             <div class="row">
 
@@ -30,13 +30,61 @@
 
     <main>
 
-        <div class="container text-center">
+        <div class="container text-center my-4">
+
+            <div class="row rpw-col-1">
+
+                <div class="col-sm-12 col-md-6 col-lg-4 text-bg-light p-3 text-start fs-3">Colonna 1
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus rerum quidem numquam nostrum. Enim reprehenderit</div>
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-8 text-bg-secondary p-3 text-start fs-3">Colonna 2 
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="container text-center my-4">
 
             <div class="row">
 
-                <div class="col-4">gregere</div>
+                <div class="col-sm-6 col-md-4 text-bg-primary p-3 text-start fs-3">Colonna 1
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus rerum quidem numquam nostrum. Enim reprehenderit</div>
+                </div>
 
-                <div class="col-8">gesgersge</div>
+                <div class="col-sm-6 col-md-4 text-bg-success p-3 text-start fs-3">Colonna 2 
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
+                </div>
+
+                <div class="col-sm-12 col-md-4 text-bg-danger p-3 text-start fs-3">Colonna 3 
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="container text-center my-4">
+
+            <div class="row">
+
+                <div class="col-sm-6 text-bg-info p-3 text-start fs-3">Colonna 1
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus rerum quidem numquam nostrum. Enim reprehenderit</div>
+                </div>
+
+                <div class="col-sm-6 text-bg-warning p-3 text-start fs-3">Colonna 2 
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
+                </div>
+
+                <div class="col-sm-6 text-bg-dark p-3 text-start fs-3">Colonna 3 
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
+                </div>
+
+                <div class="col-sm-6 text-bg-light p-3 text-start fs-3">Colonna 4 
+                    <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
+                </div>
 
             </div>
 
