--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
         <div class="container text-center my-4">
 
-            <div class="row rpw-col-1">
+            <div class="row row-col-1">
 
                 <div class="col-sm-12 col-md-6 col-lg-4 text-bg-light p-3 text-start fs-3">Colonna 1
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus rerum quidem numquam nostrum. Enim reprehenderit</div>
                 </div>
 
-                <div class="col-sm-12 col-md-6 col-lg-8 text-bg-secondary p-3 text-start fs-3">Colonna 2 
+                <div class="col-sm-12 col-md-6 col-lg-8 text-bg-secondary p-3 text-start fs-3 text-white">Colonna 2 
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
                 </div>
 
@@ -50,15 +50,15 @@
 
             <div class="row">
 
-                <div class="col-sm-6 col-md-4 text-bg-primary p-3 text-start fs-3">Colonna 1
+                <div class="col-sm-6 col-md-4 col-lg-4 text-bg-primary p-3 text-start fs-3">Colonna 1
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus rerum quidem numquam nostrum. Enim reprehenderit</div>
                 </div>
 
-                <div class="col-sm-6 col-md-4 text-bg-success p-3 text-start fs-3">Colonna 2 
+                <div class="col-sm-6 col-md-4 col-lg-4 text-bg-success p-3 text-start fs-3">Colonna 2 
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
                 </div>
 
-                <div class="col-sm-12 col-md-4 text-bg-danger p-3 text-start fs-3">Colonna 3 
+                <div class="col-sm-12 col-md-4 col-lg-4 text-bg-danger p-3 text-start fs-3">Colonna 3 
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
                 </div>
 
@@ -70,19 +70,19 @@
 
             <div class="row">
 
-                <div class="col-sm-6 text-bg-info p-3 text-start fs-3">Colonna 1
+                <div class="col-sm-6 col-md-3 col-lg-3 text-bg-info p-3 text-start fs-3 text-white">Colonna 1
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus rerum quidem numquam nostrum. Enim reprehenderit</div>
                 </div>
 
-                <div class="col-sm-6 text-bg-warning p-3 text-start fs-3">Colonna 2 
+                <div class="col-sm-6 col-md-3 col-lg-3 text-bg-warning p-3 text-start fs-3 text-white">Colonna 2 
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
                 </div>
 
-                <div class="col-sm-6 text-bg-dark p-3 text-start fs-3">Colonna 3 
+                <div class="col-sm-6 col-md-3 col-lg-3 text-bg-dark p-3 text-start fs-3">Colonna 3 
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
                 </div>
 
-                <div class="col-sm-6 text-bg-light p-3 text-start fs-3">Colonna 4 
+                <div class="col-sm-6 col-md-3 col-lg-3 text-bg-light p-3 text-start fs-3">Colonna 4 
                     <div class="fs-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis ipsum corrupti dolores amet nostrum ratione praesentium nobis quisquam libero.</div>
                 </div>
 
